tests/paczka2/big_fuzzy/11074833.err
Error in line 1: A212 S543 97,9
Error in line 3: VKwMWUT S543 46,5
Error in line 21: NzG9OiHLYl A902 38,1
Error in line 19: WqlqpL S543 2,7
Error in line 23: NzG9OiHLYl A632 9,9
Error in line 15: VKwMWUT A902 81,2
Error in line 27: NzG9OiHLYl A212 78,0
Error in line 30: NzG9OiHLYl A632 42,9
Error in line 34: zQhjvJG7 A212 72,5
Error in line 42: fMcaXfIHu A632 47,9
Error in line 46: WqlqpL S543 5,1
Error in line 57: VKwMWUT A902 -4,7
Error in line 61: WqlqpL A632 308,2
Error in line 56: VKwMWUT A902 66,5
Error in line 55: kFS A632 0,9
Error in line 87: VKwMWUT A632 79,1
Error in line 83: zQhjvJG7 A902 107,2
Error in line 92: NzG9OiHLYl S543 59,6
Error in line 91: zQhjvJG7 A632 8,8
Error in line 101: fMcaXfIHu A212 42,0
Error in line 117: VKwMWUT A212 67,1
Error in line 110: zQhjvJG7 A212 75,7
Error in line 116: A212 A902 7,2
Error in line 129: A212 A212 88,0
Error in line 132: A212 A902 48,6
Error in line 138: kFS A902 96,6
Error in line 143: kFS S543 66,8
Error in line 154: VKwMWUT A212 79,20
Error in line 153: VKwMWUT A212 43,0
Error in line 144: kFS A902 97,8
Error in line 163: zQhjvJG7 A632 72,7
Error in line 169: VKwMWUT S543 376,8
Error in line 179: NzG9OiHLYl A212 26,1
Error in line 202: kFS A902 79,4
Error in line 207: kFS S543 48,8
Error in line 208: kFS A902 40,2
Error in line 211: zQhjvJG7 A902 77,04
Error in line 209: fMcaXfIHu A212 27,2
Error in line 206: zQhjvJG7 A902 39,9
Error in line 216: zQhjvJG7 A632 7,3
Error in line 214: WqlqpL A902 20,3
Error in line 221: A212 A902 79,9
Error in line 227: VKwMWUT S543 48,9
Error in line 233: NzG9OiHLYl S543 44,5
Error in line 241: WqlqpL A63! 79,7
Error in line 249: fMcaXfIHu A632 72,1
